# python_group_3

./: .gitignore
Modul2/Postawy_SQLAlchemy_ORM/Lekcja 2/EX-09/ex-09/: alembic.ini  connect_db.py  main.py  models.py  mynotes.db  pyproject.toml  sample_query.sql  seeds.py
Modul2/Postawy_SQLAlchemy_ORM/Lekcja 2/EX-09/ex-09/alembic/versions/: 2979950fed15_init.py
QA/: hw_10.py  hw_11.py  intro.md
advanced_work_with_string/: _agenda.md  regex_expression.py  special_characters.py  translate_method.py
built-in_python_packages/: 01_datetime_in_python.py  02_timedelta_in_python.py  03_timestamp_in_python.py  04_convert_date_values_in_python.py  04_module_random_in_python.py  05_calculation_precision_control.py  05_module_random_in_python.py  06_math_module_in_python.py  07_collections_in_python.py  08_list_comprehensions.py
classes_in_python/: 1_Introduction_to_classes.py  2_class_and_object_creation.py  5_inheritance.py  6_polymorphism.py  7_encapsulation.py  8_exceptions_in_python.py
control_structures/: 2_exceptions.py  3_loops.py
data_structures/: intro.md
functions/: 1a_functions.py  args_and_kwargs.py  intro.md  main.py  test.txt
magic_methods/: 1_intro.py  2_init_method.py  3_str_and_repr_method.py  4_len_method.py  5_getitem_and_setitem_methods.py  6_funktory_oraz_metoda_call.py  7_context_manager.py  8_iterators_generators.py  9_encapsulation.py  _agenda.md  sample_class.py
operations_on_files/: Python.txt  context_manager.py  descriptors.py  file_modes.py  read_and_save_files.py  run.py  sample.txt  sample_functions.py  text.txt
(+411 files in other folders)
