[tool.poetry]
name = "ex-09"
version = "0.1.0"
description = ""
authors = ["aspf23 <a.sobczyk@pathfinder23.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
alembic = "^1.13.1"
sqlalchemy = "^2.0.29"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
